--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 @font-face{font-family:'FontAwesome';src:url('font/fontawesome-webfont.eot?v=4.0.1');src:url('font/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'),url('font/fontawesome-webfont.woff?v=4.0.1') format('woff'),url('font/fontawesome-webfont.ttf?v=4.0.1') format('truetype'),url('font/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');font-weight:normal;font-style:normal}
 
 @font-face {
@@ -178,13 +177,13 @@ tr:last-child td.last {
 	-moz-border-radius-bottomright:5px;
 	-webkit-border-bottom-right-radius:5px; /* Saf3-4 */
 }
-
+/*
 /*********************************************************************************/
 /* Icons                                                                         */
 /* Powered by Font Awesome by Dave Gandy | http://fontawesome.io                 */
 /* Licensed under the SIL OFL 1.1 (font), MIT (CSS)                              */
 /*********************************************************************************/
-
+/*
 	.fa
 	{
 		text-decoration: none;
@@ -202,7 +201,7 @@ tr:last-child td.last {
 		.fa:before
 		{
 			display:inline-block;
-			font-family: FontAwesome;
+			font-family: Arial;
 			font-size: 1.25em;
 			text-decoration: none;
 			font-style: normal;
